# rust-openid-connect

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  package.json  webpack.config.js
src/: authentication.rs  authorize.rs  back.rs  client_application.rs  config.rs  grant_type.rs  handlers.rs  helpers.rs  jwt.rs  lib.rs  login.rs  login_manager.rs  params.rs  response_mode.rs  response_type.rs  result.rs  serialisation.rs  sessions.rs  site_config.rs  truthy.rs  urls.rs  users.rs  validation.rs  view.rs  view_models.rs  x_headers.rs
src/oauth2/: client.rs  client_repo.rs  json_error.rs  mod.rs
src/oauth2/models/: authorize_request.rs  client.rs  grant.rs  mod.rs  registration.rs  tokens.rs  webfinger_request.rs
src/oauth2/repos/: client_repo.rs  grant_repo.rs  mod.rs  token_repo.rs
src/oauth2/routes/: authorize.rs  consent.rs  identity.rs  mod.rs  openid_config.rs  register.rs  token.rs  userinfo.rs  webfinger.rs
src/routes/: application_api.rs  applications.rs  authorize.rs  grants.rs  home.rs  login.rs  mod.rs  register.rs  session.rs  token.rs
src/service/: mod.rs
src/service/routes/: consent.rs  login.rs  mod.rs
src/validation/: builder.rs  field.rs  mod.rs  params.rs  result.rs  state.rs  validation.rs
templates/: _layout.html.hbs  consent.html.hbs  footer.html.hbs  header.html.hbs  index.hbs  index.html.hbs  login.html.hbs  nav.html.hbs  register.html.hbs
templates/applications/: _client_application.html.hbs  edit.html.hbs  index.html.hbs  new.html.hbs  show.html.hbs
templates/grants/: index.html.hbs  show.html.hbs
templates/permissions/: show.html.hbs
web/: package.json  server.js  webpack.config.js  webpack.dev.config.js
web/src/css/: app.scss
web/src/js/: app.js
