[package]
name = "openid-connect"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]

[dependencies]
iron = "0.3.0"
logger = "0.0.3"
router = "0.1.1"
urlencoded = "0.3.0"
bodyparser = "0.3.0"
quick-error = "1.0.0"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.2"
log = "0.3.6"
env_logger = "0.3.3"
staticfile = "0.2.0"
mount = "0.1.0"
vlad = { path = "../vlad" }
rustc-serialize = "0.3"
rand = "0.3.14"
url = "0.5.8"
cookie = "0.2.2"
oven = "0.3.0"
persistent = "0.1.0"
plugin = "0.2.6"

[dependencies.handlebars-iron]
version = "0.15.0"
features = ["serde_type"]

[dev_dependencies]

[[bin]]
name = "server"

[[example]]
name = "rp_server"

[[example]]
name = "rp_client"
