[package]
name = "openid-connect"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]

[replace]
"openssl:0.7.11" = {git = "https://github.com/sfackler/rust-openssl.git", commit = "dce59a63" }

[dependencies]
iron = "0.3.0"
logger = "0.0.3"
router = "0.1.1"
urlencoded = "0.3.0"
bodyparser = "0.3.0"
quick-error = "1.0.0"
serde = "0.7.4"
serde_json = "0.7.0"
serde_macros = "0.7.4"
log = "0.3.6"
env_logger = "0.3.3"
staticfile = "0.2.0"
mount = "0.1.0"
rustc-serialize = "0.3"
rand = "0.3.14"
url = "0.5.8"
cookie = "0.2"
oven = "0.3.0"
persistent = "0.1.0"
plugin = "0.2.6"
rust-crypto = "0.2.35"
openssl = "0.7.11"
rbvt = {path = "../rbvt"}
jsonwebtoken = {path = "../keats-rust-jwt"}

[dependencies.handlebars-iron]
version = "0.15.0"
features = ["serde_type"]

[dev_dependencies]

[build-dependencies]
gcc = "*"

[[bin]]
name = "server"

[[example]]
name = "rp_server"

[[example]]
name = "rp_client"
