[package]
name = "openid-connect"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]

[replace]
"urlencoded:0.5.0" = { git = "https://github.com/cmsd2/urlencoded.git" }

[dependencies]
iron = "0.5"
iron-sessionstorage = "0.6.3"
logger = "0.3"
router = "0.5"
urlencoded = "0.5.0"
bodyparser = "0.6"
quick-error = "1.0.0"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
log = "0.3.6"
env_logger = "0.3.3"
staticfile = "0.4.0"
mount = "0.3.0"
rustc-serialize = "0.3"
rand = "0.3.14"
url = "1.1"
cookie = "0.6"
persistent = "0.3.0"
plugin = "0.2.6"
rust-crypto = "0.2.35"
openssl = "0.9"
rbvt = {git = "https://github.com/cmsd2/rbvt.git"}
jsonwebtoken = {path = "../keats-rust-jwt"}
chrono = "0.2.22"
cast = "0.1.0"

[dependencies.handlebars-iron]
version = "0.23.0"
features = ["serde_type"]

[dev_dependencies]

[build-dependencies]
gcc = "*"

[[bin]]
name = "server"

[[example]]
name = "rp_server"

[[example]]
name = "rp_client"
